# aws-sso-util

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  aws-configure-sso-profile  aws_sso_credential_process.py  build_from_source.sh  cfn_macro_template.yaml  macro-template.yaml  pyproject.toml
.github/: pull_request_template.md
aws_sso_credential_process/: __init__.py  aws_configure_sso_profile.py  aws_sso_credential_process.py  credentials.py  exceptions.py  utils.py
cli/: README.md  pyproject.toml
cli/src/: cfn_macro_handler.py  requirements.txt
cli/src/aws_sso_util/: __init__.py  __main__.py  assignments.py  cfn.py  cfn_deploy.py  check.py  cli.py  configure_profile.py  console.py  credential_process.py  deploy_macro.py  login.py  logout.py  lookup.py  populate_profiles.py  roles.py  run_as.py  sso.py  utils.py
cli/src/aws_sso_util/_aws_sso_lib/: __init__.py  assignments.py  browser.py  sso.py
cli/src/aws_sso_util/_aws_sso_lib/vendored_botocore/: utils.py
cli/src/aws_sso_util/cfn_deploy/: command.py  config.py  validate.py
cli/src/aws_sso_util/cfn_lib/: __init__.py  cfn_yaml_tags.py  config.py  macro.py  resources.py  templates.py  utils.py
docs/: check.md  cloudformation.md  configure.md  console.md  credential-process.md  login.md  lookup.md  primer.md  run-as.md
examples/: Makefile  profile_name_format_process.py
examples/config/: base_template.yaml  example-config.yaml
examples/template/: example-template.yaml
lib/: README.md  pyproject.toml
lib/aws_sso_lib/: __init__.py  assignments.py  browser.py  compat.py  config.py  config_file_writer.py  exceptions.py  fake_identifiers.py  format.py  lookup.py  sso.py
lib/aws_sso_lib/vendored_awscli/: utils.py
lib/aws_sso_lib/vendored_botocore/: __init__.py  credentials.py  exceptions.py  tokens.py  utils.py
macro/: .gitignore  cfn-lint-spec.json  copy_for_dev  template.yaml
macro/src/: handler.py  requirements.txt
src/: cfn_macro_handler.py  requirements.txt
src/aws_sso_util/: __init__.py  __main__.py  api_utils.py  assignments.py  browser.py  config_file_writer.py  exceptions.py  fake_identifiers.py  format.py  generate_fake_identifiers.py  lookup.py  sso.py
src/aws_sso_util/cfn/: cfn_yaml_tags.py  config.py  macro.py  resources.py  templates.py  utils.py
src/aws_sso_util/cli/: __init__.py  assignments.py  cfn.py  configure_profile.py  credential_process.py  deploy_macro.py  login.py  logout.py  lookup.py  populate_profiles.py  roles.py  utils.py
src/aws_sso_util/vendored_botocore/: config_file_writer.py  exceptions.py
