[tool.poetry]
name = "aws-sso-util"
version = "1.4.0"
description = "Utilities to make AWS SSO easier"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/benkehoe/aws-sso-util"

[tool.poetry.scripts]
aws-sso-credential-process = 'aws_sso_credential_process.aws_sso_credential_process:main'
aws-sso-configure-profile  = 'aws_sso_credential_process.aws_configure_sso_profile:main'
aws-configure-sso-profile  = 'aws_sso_credential_process.aws_configure_sso_profile:main'

[tool.poetry.dependencies]
python = "^3.5"
# botocore = {git = "https://github.com/boto/botocore.git", rev = "v2"}
click = "^7.1.2"
boto3 = "^1.16.13"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
