[tool.poetry]
name = "aws-sso-lib"
version = "1.14.0" # change in aws_sso_lib/__init__.py too
description = "Library to make AWS SSO easier"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/benkehoe/aws-sso-util/blob/master/lib/README.md"
repository = "https://github.com/benkehoe/aws-sso-util"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"
# botocore = {git = "https://github.com/boto/botocore.git", rev = "v2"}
boto3 = ">=1.24.60, <2.0.0"
aws-error-utils = "^2.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
mypy = "^0.931"
types-python-dateutil = "^2.8.7"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
